--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=3000
 NODE_ENV= "development"
 MONGO_URI='mongodb+srv://yonasbe999:mKlJA69xeDETOfC9@cluster0.r24523p.mongodb.net/moviesApp?retryWrites=true&w=majority&appName=Cluster0'
 JWT_SECRET= dfhjryrovnfhdeyrwpori85475
-
+NODE_ENV = "production"
 
 # "mongodb+srv://yonasbe999:mKlJA69xeDETOfC9@cluster0.r24523p.mongodb.net/moviesApp?retryWrites=true&w=majority&appName=Cluster0"
 
