--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "fullstack": "concurrently \"npm run backend\" \"npm run frontend\"",
-    "frontend": "cd frontend && npm run dev",
-    "backend": "nodemon backend/index.js"
+    "fullstack": "concurrently \"npm run backend\" \"npm run Frontend\"",
+    "frontend": "cd Frontend && npm run dev",
+    "backend": "nodemon backend/index.js",
+    "build": "cd Frontend && npm run build",
+    "start": "cross-env NODE_ENV=production node backend/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon backend/index.js"
   },
   "type": "module",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -23,5 +23,8 @@
     "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
