--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "fullstack": "concurrently \"npm run backend\" \"npm run Frontend\"",
     "frontend": "cd Frontend && npm run dev",
     "backend": "nodemon backend/index.js",
-    "build": "cd Frontend && npm run build",
+    "build": "cd Frontend && npm install && npm run build",
     "start": "cross-env NODE_ENV=production node backend/index.js",
     "dev": "cross-env NODE_ENV=development nodemon backend/index.js"
   },
